// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderAllClearSummary > renders the all-clear state with a resolved count (golden) 1`] = `
"### 🧭 AI triage — all clear ✅

3 previously reported failure(s) resolved.

---
_Triaged by [playwright-ai-triage](https://github.com/Jarroslav/playwright-ai-triage)_"
`;

exports[`renderMarkdownSummary > groups by project when a project map is provided (golden) 1`] = `
"### 🧭 AI triage — 2 failure(s) triaged

#### chromium

**🐞 REAL_BUG (1)**

- **test a** — because a _(90%)_
  - \`/repo/tests/a.spec.ts:7\`

#### firefox

**🎲 FLAKY (1)**

- **test b** — because b _(90%)_
  - \`/repo/tests/b.spec.ts:7\`

---
_Triaged by [playwright-ai-triage](https://github.com/Jarroslav/playwright-ai-triage) · claude-haiku-4-5 · $0.0123_"
`;

exports[`renderMarkdownSummary > renders delta labels: new gets full detail, persisting collapses to one line (golden) 1`] = `
"### 🧭 AI triage — 2 failure(s) triaged

✅ **2 failure(s) resolved since the last run.**

**🐞 REAL_BUG (1)**

- 🆕 **test fresh** — because fresh _(90%)_
  - \`/repo/tests/fresh.spec.ts:7\`

**🎲 FLAKY (1)**

- ⏳ **test again** _(90%)_ · \`/repo/tests/again.spec.ts:7\`

---
_Triaged by [playwright-ai-triage](https://github.com/Jarroslav/playwright-ai-triage) · claude-haiku-4-5 · $0.0123_"
`;

exports[`renderMarkdownSummary > renders the grouped summary (golden) 1`] = `
"### 🧭 AI triage — 3 failure(s) triaged

**🐞 REAL_BUG (1)**

- **test a** — because a _(90%)_
  - \`/repo/tests/a.spec.ts:7\`

**🎯 SELECTOR_DRIFT (1)**

- **test b** — because b _(90%)_
  - fix: \`getByRole('button', { name: 'Buy' })\`
  - \`/repo/tests/b.spec.ts:7\`

**🎲 FLAKY (1)**

- **test c** — because c _(90%)_
  - \`/repo/tests/c.spec.ts:7\`

---
_Triaged by [playwright-ai-triage](https://github.com/Jarroslav/playwright-ai-triage) · claude-haiku-4-5 · $0.0123_"
`;
